# firstdataset

./: .gitignore  QSAR_BIODEGRADATION_CURATED.csv  README.md  WEEK10_FEATURE_ENGINEERING_SUMMARY.txt  WEEK11_FEATURE_ANALYSIS_SUMMARY.txt  WEEK4_DATASET_METADATA.json  WEEK5_BASELINE_METRICS.json  WEEK5_BASELINE_MODELING.md  WEEK5_MODEL_RESULTS.txt  WEEK6_FNN_RESULTS.txt  WEEK7_GNN_RESULTS.txt  WEEK8_CROSS_ENVIRONMENT_VALIDATION.md  WEEK9_VALIDATION_SUMMARY.txt  activate-project.sh  pyproject.toml
docs/: ARCHITECTURE.md  DATA.md  MODELING.md
reports/: week10_feature_diagnostics.csv  week10_feature_results.csv  week10_feature_sets.json  week11_feature_rankings.csv  week11_feature_set_diagnostics.csv  week11_feature_set_generalization.csv  week11_feature_set_results.csv  week11_feature_sets.json  week12_cross_env_uncertainty.csv  week12_prediction_level_uncertainty.csv  week12_selective_prediction.csv  week12_uncertainty_metrics.csv  week12_uncertainty_summary.txt  week4_dataset_curation.md  week5_baseline_metrics.json  week6_fnn_metrics.json  week7_gnn_metrics.json  week8_cross_environment_metrics.json  week8_cross_environment_summary.csv  week9_fold_diagnostics.csv  week9_model_results.csv  week9_validation_metrics.json
scripts/: curate_qsar_dataset.py  run_regression_baselines.py  run_week10_feature_engineering.py  run_week11_feature_analysis.py  run_week12_uncertainty_analysis.py  run_week8_cross_environment.py  run_week9_validation.py  smoke_train.py  train_week5_baselines.py  train_week6_fnn.py  train_week7_gnn.py
src/firstdataset/: data.py  (+8 more)
tests/: test_data.py
