[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "firstdataset"
version = "0.1.0"
description = "Reusable data loading pipeline for the QSAR biodegradation dataset."
requires-python = ">=3.14"
dependencies = [
  "numpy>=2.4.3",
  "pandas>=3.0.1",
  "scikit-learn>=1.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
